--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/xmv-logo.ico">
     <link rel="stylesheet" href="/prism.css">
     <script src="/prism.js"></script>
-    <title>小猛的主页</title>
+    <title>Xiaomeng-Vue-UI 前端框架</title>
 </head>
 <body>
     <div id="app"></div>
